Fix post container padding on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -999,7 +999,7 @@ aside {
   }
 
   .section-container:last-of-type {
-    margin: 15px 0 0 0;
+    padding: 0;
   }
 
   .post-container {
